fix: proper logo size on mobile

--- a/open-source/index.css
+++ b/open-source/index.css
@@ -89,7 +89,7 @@ body {
 .header-logo {
     height: 40px;
     margin-right: 20px;
-    min-width: 200px;
+    min-width: 100px;
 }
 
 .main-container {
